# openwarcraft3

./: .gitignore  BUILD_SUMMARY.md  BUILD_WITH_VENDOR.md  CLINE_README.md  CLINE_SHOULD_KNOWN.md  CMakeLists.txt  DEVBLA.md  DEVPLAN.md  DOC.md  GAMEMSG.md  Human02  PROTOCOL.md  README.md  build.sh  build_vendor.sh  combine_compile_commands.py  premake5.lua  run.sh  test_offsets  test_ui_fields
.cache/clangd/index/: SDL.h.274F926CEA854F1C.idx  SDL_assert.h.123264D9D5A1E412.idx  SDL_atomic.h.04CE86B7676016BD.idx  SDL_audio.h.E8BF02888FBFCC3A.idx  SDL_blendmode.h.DC6F01B62D4DF790.idx  SDL_clipboard.h.4ACC06EC4290F0F3.idx  SDL_config.h.8B657D1B7C442C55.idx  SDL_config_minimal.h.BCDA59802D453D47.idx  SDL_cpuinfo.h.8B5685B95704EE87.idx  SDL_endian.h.86A04CE05168C26A.idx  SDL_error.h.1E626465967F5641.idx  SDL_events.h.713219033570C455.idx  SDL_filesystem.h.979761E79B23CCF9.idx  SDL_gamecontroller.h.E3B67D5C35EDBBB6.idx  SDL_gesture.h.BF8FD687CAC78847.idx  SDL_guid.h.35EB32B079028940.idx  SDL_haptic.h.1236C31393E78981.idx  SDL_hidapi.h.A5D383B171C58AE5.idx  SDL_hints.h.32E1A82720B858E6.idx  SDL_joystick.h.2E03D515E2B10287.idx  SDL_keyboard.h.52D9D9F6535C5B2E.idx  SDL_keycode.h.2FF409DA915FFFF2.idx  SDL_loadso.h.F05D4954711BC81A.idx  SDL_locale.h.1B05005571C4052F.idx  SDL_log.h.A7758173430C9BD7.idx  SDL_main.h.1FC5B0ABA58CE7C7.idx  SDL_messagebox.h.111B8E3FB1DCC34D.idx  SDL_metal.h.B9BA828B2CF578E4.idx  SDL_misc.h.6B446C6A107F5AE2.idx  SDL_mouse.h.F4C12B6F5D964824.idx  SDL_mutex.h.A990A535E5636335.idx  SDL_opengl.h.20037659A7416856.idx  SDL_opengl_glext.h.4AC66F04828437D2.idx  SDL_pixels.h.34C83277DD50BF71.idx  SDL_platform.h.D734E2B4A18B2AB2.idx  SDL_power.h.40DD1133412BC403.idx  SDL_quit.h.4F59D4A6D082B982.idx  SDL_rect.h.E2F4A73E5BC8D112.idx  SDL_render.h.E9B8726812F10A71.idx  SDL_rwops.h.B01795FD3A47BF13.idx  (+169 more)
.github/workflows/: c-cpp.yml
html_tests/: README.md  index.html  index2.html  test_enhanced_css.html  test_html_render.c  test_render.html
src/: CMakeLists.txt
src/canvas2d/: README.md  canvas2d.c  canvas2d.h  canvas2d_test.c  canvas2d_test.h  example.c
src/client/: cl_console.c  cl_input.c  cl_main.c  cl_parse.c  cl_scrn.c  cl_view.c  client.h  renderer.h
src/cmath3/: CMakeLists.txt
src/common/: cmodel.h  common.c  common.h  main.c  mapinfo.h  msg.c  net.h  parser.c  pzhash.c  pzhash.h  r_mdx_load.c  shared.h  sheet.c  test.html  world.c
src/game/: CMakeLists.txt  g_ai.c  g_commands.c  g_events.c  g_local.h  g_main.c  g_monster.c  g_phys.c  g_spawn.c  m_unit.c  parser.c  parser.h
src/game/api/: api_camera.h  api_cinefilter.h  api_group.h  api_misc.h  api_module.c  api_trigger.h  api_unit.h
src/game/hud/: ui_console.c  ui_log.c
src/game/ini/: ini_parser.c  ini_parser.h
src/game/jass/: jass_parser.c  jass_parser.h  vm_main.c  vm_public.h
src/game/skills/: s_build.c  s_devotionaura.c  s_holylight.c  s_move.c  s_selectskill.c  s_skills.h
src/game/ui/: ui_fdf.c  ui_write.c
src/html/: css.c  css.h  html.c  html.h  html_main.c  layout.h
src/libs/: mystr.c  mystr.h
src/renderer/: CMakeLists.txt  r_blp1.c  r_draw.c  r_ents.c  r_font.c  r_local.h  r_main.c  r_shader.c
src/renderer/mdx/: r_mdx.h  r_mdx_compat.h  r_mdx_load.c  r_mdx_render.c
src/renderer/w3m/: r_war3map.c  r_war3map.h  r_war3map_cliffs.c  r_war3map_utils.c
src/server/: game.h  server.h  sv_game.c  sv_init.c  sv_main.c  sv_parse.c
